fix:Add the URL

--- a/backend/.env
+++ b/backend/.env
@@ -1,1 +1,2 @@
 MONGO_URI=mongodb+srv://visara1327:bp2ZiF4n9Ri7lyD7@mycluster.w0gv3.mongodb.net/OnlineAssertment?retryWrites=true&w=majority
+PORT=8000
